css/app.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: rgb(128, 121, 83); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    text-transform: uppercase;
}

/*
 * Styles for the deck of cards
 */

.deck {
    width: 660px;
    min-height: 680px;
    background: linear-gradient(160deg, rgb(165, 147, 56) 0%, rgba(144, 126, 38, 0.733) 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 3px 6px 34px 10px rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    height: 125px;
    width: 125px;
    background: #2e3d49;
    font-size: 0;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 4px 6px 11px 5px rgb(31, 41, 50);
    transition: background 0.6s;
    }

.deck .card.open {
    transform: rotateY(0);
    background: #cbc400;
    cursor: default;
    transition: all 0.2s;
}

.noClick {
    pointer-events: none;
}

.deck .card.show {
    font-size: 53px;
}

.deck .card.match {
    cursor: default;
    background: #1a7902b6;
    font-size: 53px;
    transition: all 0.8s;
}

/*
 * Styles for the Score Panel
 */

.score-panel {
    /* border: 1px solid pink; */
    text-align: left;
    width: 642px;
    margin-bottom: 16px;
    background: rgba(105, 105, 105, 0.399);
    padding: 6px 12px;
    border-radius: 8px;
    box-shadow: 3px 6px 34px 10px rgba(46, 61, 73, 0.5);
}

.score-panel .stars {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 5px 0 0;
    font-size: 24px;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
    color: gold;
}

.score-panel .restart {
    float: right;
    cursor: pointer;
    font-size: 24px;
}

